* Fixed header link color and underline. * Fixed error on mobile breakpoint by passing "title" and "setTitle" props in [page] to MemberAccordion, then to MemberContent. * Fixed missing top border on Discount cards.

--- a/assets/global-styles.less
+++ b/assets/global-styles.less
@@ -125,8 +125,8 @@ body .jumbotron {
 // override link reboot // !important needed to override
 a,
 a:not([href]):not([tabindex]) {
-  text-decoration: underline !important;
-  color: @link-blue !important;
+  text-decoration: underline;
+  color: @link-blue;
 }
 
 label {
